Fix vertical alignment of `color` fields with their label

--- a/src/assets/sass/modules/_forms.scss
+++ b/src/assets/sass/modules/_forms.scss
@@ -126,6 +126,14 @@ textarea {
 }
 
 /**
+ * Fix vertical alignment of `color` fields with their label.
+ */
+
+[type="color"] {
+    vertical-align: middle;
+}
+
+/**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
  * `font-size` values of the `input`, it causes the cursor style of the
  * decrement button to change from `default` to `text`.
